[package]
name = "doom-fire-rs"
version = "0.1.0"
authors = ["Rodolphe Marques <marques.rodolphe@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
pixels = "0.0.4"
winit = "0.22.2"
winit_input_helper = "0.6.0"
